--- a/package.json
+++ b/package.json
@@ -15,17 +15,20 @@
     "@hookform/resolvers": "^3.4.0",
     "@mui/material": "^5.15.18",
     "@mui/x-data-grid": "^7.5.0",
+    "axios": "^1.6.8",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
     "react-hot-toast": "^2.4.1",
+    "react-query": "^3.39.3",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
     "yup": "^1.4.0",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
