--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
-    "version": 2,
-    "builds": [{ "src": "index.html", "use": "@vercel/static-build" }],
-    "routes": [
-      { "src": "/(.*)", "dest": "/index.html" }
-    ]
-  }
-  
+  "rewrites": [
+    { "source": "/", "destination": "/" },
+    { "source": "/pokemons", "destination": "/pokemons" },
+    { "source": "/(.*)", "destination": "/" }
+  ]
+}
